# esp32Metheo

./: .gitignore  README.md
esp32/: BME280.py  boot.py  espconf.py  espwconstHOME.py  main.py  mqttudp  sht30.py
espidf/: README.md  sdkconfig.defaults
espidf/main/: CMakeLists.txt  Kconfig.projbuild  ap_config.c  ap_config.h  main.c  mqttudp_client.c  mqttudp_client.h  sensor.c  sensor.h  sht30.c  sht30.h  wifi.c  wifi.h
server/: Dockerfile  Makefile  config.cfg  espMetheo  listenudp.py  startbg.sh  web.py
server/static/: style.css
server/templates/: _readings.html  graph.html  index.html
